Fixed form group align

--- a/src/containers/account/marketplace/MarketPLace.scss
+++ b/src/containers/account/marketplace/MarketPLace.scss
@@ -20,7 +20,6 @@
     }
   }
   .input-group {
-    display: table !important;
     width: 100%;
     margin-bottom: 15px;
 
